--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-DB_HOSTNAME = localhost
-DB_USERNAME = postgres
-DB_PASSWORD = alam
-DB_NAME = db_latihan_postgresql
-PORT = 3002
-DB_PORT = 5432
-JWT_SECRET = contoh123OKE
+DB_HOSTNAME=heffalump.db.elephantsql.com
+DB_USERNAME=oayqkjuo
+DB_PASSWORD=9JzO_toj33-cTQqh7tImBqrPmDpTU4Ue
+DB_NAME=oayqkjuo
+PORT=3002
+DB_PORT=5432
+JWT_SECRET=contoh123OKE
